wip: 🚧 Attempt to fix odd offset on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    /* Same has .h-full tailwind class */
-    height: 100%;
+html,
+body {
+  @apply h-full w-full;
+}
+
+html {
+  @apply antialiased;
 }
